[package]
name = "pixel_fuse"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.35"
console = "0.15.8"
gif = "0.13.1"
indicatif = "0.17.8"
ring = "0.17.8"
serde = { version = "1.0.197", features = ["derive"] }
